# sortbot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/sortbot/: __init__.py  cli.py  models.py  report.py  simulator.py
src/sortbot/analyzer/: advisor.py  composition.py  impact.py
src/sortbot/classifier/: categories.py  model.py  preprocessor.py
tests/: test_analyzer.py  test_benchmark.py  test_categories.py  test_classifier.py  test_cli.py  test_core.py  test_integration.py  test_models.py  test_preprocessor.py  test_simulator.py
